
	* common/doc/manpage-common-outofband-timeout.man: Split into
	manpage-common-outofband-session-timeout.man and
	manpage-common-outofband-retransmission-timeout.man.

	* Adjust all manpages appropriately for change.

	* ipmipower/: Use common manpages as appropriate.

	* ipmiconsole/src/ipmiconsole/: Support --session-timeout and
	--retransmission-timeout options.
	
2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/src/tool-cmdline-common.c (parse_workaround_flags): Fix
	parsing bug.

	* libfreeipmi/src/api/ipmi-lan-session-common.c,
	libfreeipmi/src/api/ipmi-api.c,
	libfreeipmi/include/freeipmi/api/ipmi-api.h,
	ipmipower/src/,
	common/src/tool-common.c,
	common/doc/manpage-common-troubleshooting.man: Add new "connection
	timeout" error message.
	
2008-05-15  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/: Remove excess newline outputs.

	* ipmipower/src/ipmipower_privilege_level.h,
	ipmipower/src/ipmipower_privilege_level.c,
	ipmipower/src/ipmipower_workarounds.h,
	ipmipower/src/ipmipower_workarounds.c,
	ipmipower/src/ipmipower_cipher_suite_id.h,
	ipmipower/src/ipmipower_cipher_suite_id.c: Removed files.

	* ipmipower/src/: Remove need for internal privilege_level_t,
	workaround flags, and cipher_suite_id_t type and macros.
	
	* ipmipower/: Continue cleanup/fixes.

2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-text.man: Add information
	on types of errors users may see if their machine has an issue
	that may be worked around with a workaround.
	
2008-05-15  Lisa Camesano <lisa.camesano@sun.com>

	* common/doc/manpage-common-workaround-text.man: Update with Sun
	workaround information.
	
2008-05-14  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Continue cleanup/fixes.

	* tagged pre_get_channel_cipher_remove

	* ipmipower/: Remove check of cipher suite id support via get
	channel cipher suites command.  Error case now falls through to
	open session request.

	* tagged post_get_channel_cipher_remove
