@@ -1,13 +1,3 @@
-.TP
-\fB\-I\fR, \fB\-\-cipher\-suite-id\fR=\fICIPHER-SUITE-ID\fR
-Specify the IPMI 2.0 cipher suite ID to use.  The Cipher Suite ID
-identifies a set of authentication, integrity, and confidentiality
-algorithms to use for IPMI 2.0 communication.  The authentication
-algorithm identifies the algorithm to use for session setup, the
-integrity algorithm identifies the algorithm to use for session packet
-signatures, and the confidentiality algorithm identifies the algorithm
-to use for payload encryption.  Defaults to cipher suite ID 3 if not
-specified.  The following cipher suite ids are currently supported:
 .sp
 0 - Authentication Algorithm = None; Integrity Algorithm = None; Confidentiality Algorithm = None
 .sp
